<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="middle"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_vertical"
        android:maxLines="2"
        android:text="@string/text_start_address"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/startAddress"
        tools:text="Санкт-Петербург, г. Петергоф, проспект Новоизмайловский 16к3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="middle"
        android:gravity="center_vertical"
        android:maxLines="2"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        android:textColor="@color/gray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:ellipsize="middle"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_vertical"
        android:maxLines="2"
        android:text="@string/text_end_address"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/endAddress"
        tools:text="Санкт-Петербург, г. Петергоф, проспект Новоизмайловский 16к3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="middle"
        android:gravity="center_vertical"
        android:maxLines="2"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        android:textColor="@color/gray" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:fontFamily="sans-serif-medium"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/text_car_model" />

            <TextView
                android:id="@+id/carModel"
                tools:text="Kia Rio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="middle"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:textColor="@color/gray" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:fontFamily="sans-serif-medium"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/text_car_number" />

            <TextView
                android:id="@+id/carNumber"
                tools:text="A124OT102RUS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="middle"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:textColor="@color/gray" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:ellipsize="middle"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_vertical"
        android:maxLines="2"
        android:text="@string/text_driver"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/driver"
        tools:text="Васильев Иван Васильевич"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="middle"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        android:textColor="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/date"
            app:drawableStartCompat="@drawable/ic_round_access_time_24"
            tools:text="22/12/2021 13:45"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/drawable_padding"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

        <TextView
            android:id="@+id/amount"
            app:drawableStartCompat="@drawable/ic_outline_paid_24"
            tools:text="100.10 RUB"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/drawable_padding"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />
    </LinearLayout>
</LinearLayout>